added auth token invalidation logic
